--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -9,20 +9,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-            <!-- <li class="nav-item active"> -->
             <li class="nav-item"></li>
-                <a class="nav-link" href="/sudoku">Sudoku</a>
+                <a class="nav-link <% if(pageName === 'sudoku'){%>active<%}%>" href="/sudoku">Sudoku</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/crypto-blocks">Crypto Blocks</a>
+                <a class="nav-link <% if(pageName === 'crypto-blocks'){%>active<%}%>" href="/crypto-blocks">Crypto Blocks</a>
             </li>
         </ul>
 
 
-        <form class="form-inline mt-2 mt-md-0">
+        <!-- <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
 
         <!-- <ul class="navbar-nav">
             <li class="nav-item">
