--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -17,17 +17,16 @@
             </li>
         </ul>
 
-
-        <!-- <form class="form-inline mt-2 mt-md-0">
+        <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
+        </form>
 
-        <!-- <ul class="navbar-nav">
+        <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/auth/facebook"><img src="images/login-with-facebook.png"></a>
+                <a class="nav-link <% if(pageName === 'signup'){%>active<%}%>" href="/signup">Sign up</a>
             </li>
-        </ul> -->
+        </ul>
 
     </div>
 </nav>
