--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,11 +1,6 @@
 <% layout('layout') -%>
-
     <div class="container">
-        <h1>
-            <%= message %>
-        </h1>
-        <h2>
-            <%= error.status %>
-        </h2>
+        <h1><%= message %></h1>
+        <h2><%= error.status %></h2>
         <pre><%= error.stack %></pre>
     </div>
