--- a/views/crypto-blocks.ejs
+++ b/views/crypto-blocks.ejs
@@ -3,11 +3,11 @@
 
     <div class="container">
         <div class="pb-2 mt-4 mb-4 border-bottom">
-            <h3>Crypto Blocks Collection</h3>
-            <div class="small">Crypto Blocks Collection is a generative NFT art collection of digital blocks
+            <h2>Crypto Blocks Collection</h2>
+            <div class="small mt-3">&bull; A generative NFT art collection of digital blocks
                 processing in the blockchain domain.<br>
-                Each with unique properties combination.<br>
-                Available for purchase at <a href="https://opensea.io/collection/crypto-blocks-collection"
+                &bull; Each with unique properties combination.<br>
+                &bull; Available for purchase at <a href="https://opensea.io/collection/crypto-blocks-collection"
                     target="blank">Opensea.io</a>
             </div>
         </div>
@@ -17,12 +17,10 @@
         <div class="row justify-content-sm-center sketch-container mt-2">
             <div class="col-sm-auto" id="sketch-holder"></div>
         </div>
-        <div class="row justify-content-sm-center">
-            <div class="col-auto">
-                <button class="btn btn-sm btn-secondary" type="button" onclick="generateNew()">
-                    <small>Generate New NFT &raquo;</small>
-                </button>
-            </div>
+        <div class="text-center">
+            <button class="btn btn-sm btn-light" type="button" onclick="generateNew()">
+                Generate New NFT &raquo;
+            </button>
         </div>
     </div>
     <script src="/lib/cryptoBlocksGenerator.js"></script>
