--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #f5f5f5;">
     <a class="navbar-brand" href="/">
-        <img src="/images/Crypto-Block-84.gif" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="/images/brand_image.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Moon Program
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
