--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
 <% layout('layout') -%>
     <style>
         .jumbotron {
-            background-image: url("/images/Crypto-Block-61.gif");
-            background-size: cover;
+            /* background-image: url("/images/Crypto-Block-61.gif"); */
+            /* background-size: cover; */
+            background-color: hsl(0, 0%, 100%);
         }
 
         .card-img-top {
@@ -12,15 +13,15 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1>Moon (阿滿) Personal website</h1>
-            <p class="h5">This site serve as a personal bag of stuff that I find interesting,<br>
+            <h1>Moon (阿滿) personal website</h1>
+            <p>&bull; This site serve as a personal bag of stuff that I find interesting,<br>
                 including projects that I've done.</p>
         </div>
     </div>
 
     <div class="container">
         <div class="card-deck">
-            <div class="card">
+            <div class="card" style="max-width: 330px;">
                 <img src="/images/Pen-Sudoku.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Sudoku</h5>
@@ -31,8 +32,8 @@
                     <a href="/sudoku" class="btn btn-primary">Go</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="/images/Crypto-Block-84.gif" class="card-img-top" alt="">
+            <div class="card" style="max-width: 330px;">
+                <img src="/images/card_thumbnail_crypto.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Crypto Block</h5>
                     <p class="card-text">A NFT collection.</p>
