added sign in function.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
         }
     </style>
 
+    <div id="sketch-holder"></div>
+
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1>Moon (阿滿) personal website</h1>
@@ -44,3 +46,4 @@
             </div>
         </div>
     </div>
+    <script src="/lib/jumbotronGenerator.js"></script>
