--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -17,6 +17,10 @@
 <link href="/stylesheets/style.css" rel="stylesheet">
 
 <!-- script -->
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
 
 <!-- Fav and touch icons -->
