--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <% include templates/modal-login.ejs %>
     <% include templates/header.ejs %>
     <%- body -%>
     <% include templates/footer.ejs %>
