--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container text-center">
-        <span class="text-muted">© Copyright 2021 by Moon &lt;Moon.programming@gmail.com&gt;</span>
+        <span class="text-muted">© Copyright 2021 by Moon &lt;moon.programming@gmail.com&gt;</span>
     </div>
 </footer>
