--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -10,21 +10,30 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item"></li>
-                <a class="nav-link <% if(pageName === 'sudoku'){%>active<%}%>" href="/sudoku">Sudoku</a>
+                <a class="nav-link <% if(pageName === 'sudoku'){%>active<%}%>" href="/sudoku">
+                    Sudoku
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link <% if(pageName === 'crypto-blocks'){%>active<%}%>" href="/crypto-blocks">Crypto Blocks</a>
+                <a class="nav-link <% if(pageName === 'crypto-blocks'){%>active<%}%>" href="/crypto-blocks">
+                    Crypto Blocks
+                </a>
             </li>
         </ul>
 
-        <form class="form-inline mt-2 mt-md-0">
+        <!-- <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
 
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link <% if(pageName === 'signup'){%>active<%}%>" href="/signup">Sign up</a>
+            </li>
+            <li class="nav-item mt-3 mt-md-0">
+                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#loginModal">
+                    Sign in
+                </button>
             </li>
         </ul>
 
