--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #f5f5f5;">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" <% if(user){%>href="/"<%}%>>
         <img src="/images/brand_image.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Moon Program
     </a>
@@ -9,6 +9,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
+            <% if (user) { %>
             <li class="nav-item"></li>
                 <a class="nav-link <% if(pageName === 'sudoku'){%>active<%}%>" href="/sudoku">
                     Sudoku
@@ -19,15 +20,14 @@
                     Crypto Blocks
                 </a>
             </li>
+            <% } %>
         </ul>
-
-        <!-- <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
 
         <% if (user) { %>
             <ul class="navbar-nav" id="acct-nav-holder">
+                <li class="nav-item">
+                    <a class="nav-link <% if(pageName === 'acct'){%>active<%}%>" href="/acct/signup">Sign up</a>
+                </li>
                 <li class="nav-item mt-3 mt-md-0">
                     <a type="button" class="btn btn-outline-success" href="/acct/signout">
                         Sign out
@@ -36,12 +36,9 @@
             </ul>
         <% } else { %>
         <ul class="navbar-nav" id="acct-nav-holder">
-            <li class="nav-item">
-                <a class="nav-link <% if(pageName === 'acct'){%>active<%}%>" href="/acct/signup">Sign up</a>
-            </li>
             <li class="nav-item mt-3 mt-md-0">
                 <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#loginModal">
-                    Sign in
+                    Admin Login
                 </button>
             </li>
         </ul>
