--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -20,6 +20,11 @@
                     Crypto Blocks
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link <% if(pageName === 'new-nft-project'){%>active<%}%>" href="/new-nft-project">
+                    New NFT Project
+                </a>
+            </li>
             <% } %>
         </ul>
 
