--- a/views/sudoku.ejs
+++ b/views/sudoku.ejs
@@ -32,8 +32,8 @@
         <% include templates/alert.ejs %>
 
 
-        <div class="row justify-content-sm-left sketch-container mt-2">
-            <div class="col-sm-auto" id="sketch-holder"></div>
+        <div class="row justify-content-sm-left mt-2" id="sketch-holder">
+            
         </div>
 
         <div class="btn-group dropup">
