--- a/views/new-nft-project.ejs
+++ b/views/new-nft-project.ejs
@@ -19,9 +19,9 @@
             </button>
         </div>
 
-        <div class="row justify-content-sm-center sketch-container mt-2">
-            <div class="col-sm-auto" id="sketch-holder">
-                <iframe src='./new-nft-project/asset/full/1' width="400 px" height="400 px"></iframe>
+        <div class="row justify-content-sm-center mt-2">
+            <div class="embed-responsive embed-responsive-1by1" style="max-width: 400px;">
+                <iframe class="embed-responsive-item" src="./new-nft-project/asset/full/3"></iframe>
             </div>
         </div>
         <div class="text-center">
