--- a/views/crypto-blocks.ejs
+++ b/views/crypto-blocks.ejs
@@ -14,8 +14,8 @@
 
         <% include templates/alert.ejs %>
 
-        <div class="row justify-content-sm-center mt-2" id="sketch-holder">
-            
+        <div class="row justify-content-sm-center mt-2">
+            <div class="col-sm-auto" id="sketch-holder"></div>
         </div>
         <div class="text-center">
             <button class="btn btn-sm btn-light" type="button" onclick="generateNew()">
