--- a/views/sudoku.ejs
+++ b/views/sudoku.ejs
@@ -32,9 +32,7 @@
         <% include templates/alert.ejs %>
 
 
-        <div class="row justify-content-sm-left mt-2" id="sketch-holder">
-            
-        </div>
+        <div class="mt-2" id="sketch-holder"></div>
 
         <div class="btn-group dropup">
             <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
