added auto img gen and user collection.

--- a/views/new-nft-asset.ejs
+++ b/views/new-nft-asset.ejs
@@ -27,6 +27,7 @@
         const tokenHash = '<%= tokenHash %>';
         const tokenAttributes = <%- JSON.stringify(tokenAttributes) %>;
         const fullScreen = false;
+        const newlyMinted = false;
     </script>
     <script src="/lib/new-nft-generator.js"></script>
     <% } %>
