--- a/views/new-nft-full.ejs
+++ b/views/new-nft-full.ejs
@@ -38,8 +38,11 @@
         const tokenHash = '<%= tokenHash %>';
         const tokenAttributes = <%- JSON.stringify(tokenAttributes) %>;
         const fullScreen = true;
+        const newlyMinted = <%= newlyMinted %>;
+        const postUrl = '<%= postUrl %>';
+        const token = '<%= csrfToken %>';
     </script>
     <script src="/lib/new-nft-generator.js"></script>
-    <% } %>
+  <% } %>
 </body>
 </html>
