--- a/views/new-nft-asset.ejs
+++ b/views/new-nft-asset.ejs
@@ -1,33 +1,68 @@
 <% layout('layout') -%>
 
     <div class="container">
-        <div class="pb-2 mt-4 mb-4 border-bottom">
-            <h2>New NFT Collection</h2>
-            <div class="small mt-3">&bull; Mint new NFT art collection with custom smart contract.<br>
-                &bull; Each with unique properties combination.<br>
-                &bull; Secondary market available for purchase at <a href="https://opensea.io/collection/crypto-blocks-collection"
-                    target="blank">Opensea.io</a>
+        <div class="pb-2 mt-4 mb-4">
+
+            <% include templates/alert.ejs %>
+
+            <div class="row justify-content-sm-center mt-2 mb-3">
+                <div class="col-sm-auto" id="sketch-holder"></div>
             </div>
-        </div>
 
-        <% include templates/alert.ejs %>
-
-        <div class="row justify-content-sm-center mt-2">
-            <div class="col-sm-auto" id="sketch-holder"></div>
-        </div>
-        <div class="text-center">
-            <button class="btn btn-sm btn-light" type="button" onclick="generateNew()">
-                Generate New NFT &raquo;
-            </button>
+            <% if (owner) { %>
+            <h2 id="tokenName"></h2>
+            <div class="small mt-3">
+                <table class="table table-striped table-borderless">
+                    <tbody>
+                        <tr>
+                            <th scope="row">Current Owner</th>
+                            <td>
+                                <a href="https://etherscan.io/address/<%= owner %>"><%= owner.replace(owner.slice(6, 38), '...' ) %></a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Attributes</th>
+                            <td id="attributes"></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Artist</th>
+                            <td id="artist"></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Market</th>
+                            <td id="market"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <% } %>
         </div>
     </div>
-    
-    <% if (tokenHash && tokenHash != '0x0000000000000000000000000000000000000000000000000000000000000000') { %>
-    <script>
-        const tokenHash = '<%= tokenHash %>';
-        const tokenAttributes = <%- JSON.stringify(tokenAttributes) %>;
-        const fullScreen = false;
-        const newlyMinted = false;
-    </script>
-    <script src="/lib/new-nft-generator.js"></script>
-    <% } %>
+
+    <% if (owner) { %>
+        <script>
+            const tokenMeta = <%- JSON.stringify(tokenMeta) %>;
+            const tokenAttributes = tokenMeta.attributes;
+            const fullScreen = false;
+            const newlyMinted = false;
+
+            const tokenName = document.getElementById('tokenName');
+            const attributesTable = document.getElementById('attributes');
+            const artistTable = document.getElementById('artist');
+            const marketLink = document.getElementById('market');
+
+            tokenName.innerHTML = tokenMeta.name;
+            attributesTable.innerHTML = '';
+            tokenAttributes.forEach(x => {
+                attributesTable.innerHTML += `${x.trait_type}: ${x.value} <br>`
+            });
+            artistTable.innerHTML = `<a href="mailto:${tokenMeta.artistEmail}">${tokenMeta.artistName}</a>`;
+            marketLink.innerHTML = `<a href="${tokenMeta.opensea_url}" target="_blank">
+                OpenSea 
+                <img style="width:30px;" class="ml-2"
+                src="https://storage.googleapis.com/opensea-static/Logomark/Logomark-Blue.png" 
+                alt="Available on OpenSea" /></a>`;
+
+        </script>
+        <script src="/lib/new-nft-generator.js"></script>
+        <% } %>
