--- a/views/new-nft-project.ejs
+++ b/views/new-nft-project.ejs
@@ -5,7 +5,7 @@
             <h2>New NFT Collection</h2>
             <div class="small mt-3">&bull; Mint new NFT art collection with custom smart contract.<br>
                 &bull; Each with unique properties combination.<br>
-                &bull; Secondary market available for purchase at <a href="https://opensea.io/collection/crypto-blocks-collection"
+                &bull; Secondary market available for purchase at <a href="https://testnets.opensea.io/collection/moontest01"
                     target="blank">Opensea.io</a>
             </div>
         </div>
