--- a/views/new-nft-project.ejs
+++ b/views/new-nft-project.ejs
@@ -23,7 +23,7 @@
 
         <div class="d-flex justify-content-sm-center mt-2">
             <div id="nftHolder" class="embed-responsive embed-responsive-1by1" style="max-width: 400px;">
-                <iframe class="embed-responsive-item" src="./new-nft-project/asset/full/3"></iframe>
+                <iframe class="embed-responsive-item" src="/new-nft-project/asset/full/3"></iframe>
             </div>
         </div>
         <div class="text-center">
