--- a/views/new-nft-full.ejs
+++ b/views/new-nft-full.ejs
@@ -42,7 +42,7 @@
         const postUrl = '<%= postUrl %>';
         const token = '<%= csrfToken %>';
     </script>
-    <script src="/lib/new-nft-generator.js"></script>
+    <script src="/lib/skylinesEndGenerator.js"></script>
   <% } %>
 </body>
 </html>
