--- a/views/new-nft-project.ejs
+++ b/views/new-nft-project.ejs
@@ -22,6 +22,7 @@
                 <div class="col-sm-auto" id="sketch-holder"></div>
             </div>
             <div class="text-center mb-3">
+                <div class="small">Click the picture to start/pause your journey.</div>
                 <button class="btn btn-sm btn-light" type="button" onclick="generateNewSketch()">
                     Show Me Random Samples &raquo;
                 </button>
@@ -113,4 +114,4 @@
         const newlyMinted = false;
     </script>
     <script type="module" src="/lib/wallet.js"></script>
-    <script src="/lib/cityRunGenerator.js"></script>
+    <script src="/lib/skylinesEndGenerator.js"></script>
