--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -21,8 +21,8 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link <% if(pageName === 'new-nft-project'){%>active<%}%>" href="/new-nft-project">
-                    New NFT Project
+                <a class="nav-link <% if(pageName === 'skylines-end'){%>active<%}%>" href="/skylines-end">
+                    Skyline's End
                 </a>
             </li>
             <% } %>
